--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,10 @@
   "author": "bezkoder",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1192.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "node-fetch": "^3.2.10",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^5.21.3"
