--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,8 @@
   "name": "bunnyshell-books-backend",
   "version": "1.0.0",
   "description": "Node.js Rest API with Express, Sequelize & PostgreSQL",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "start:dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -25,8 +24,5 @@
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^5.21.3"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.19"
   }
 }
